[metadata]
name = workout-DanielAhlsen
version = 0.0.1
author = Daniel Ahlsen
author_email = daniel.ahlsen@gmail.com
description = A project for managing workout data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanielAhlsen/workout
project_urls =
    Bug Tracker = https://github.com/DanielAhlsen/workout/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src